--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
 
 $white: white;
-$black: black;
+$black: grey;
 
 .navbar {
   margin-bottom: 0;
