Change some colors

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@ $black: grey;
   background: $black;
 }
 body {
-  background: $black;
+  background: green;
   color: $white;
   font-family: 'Merriweather', sans-serif;
 }
@@ -40,7 +40,7 @@ p {
   color: $white;
 }
 a:visited {
-  color: $black;
+  color: black;
 }
 .jumbotron {
   background: #0048CD;
